# lockbox

./: .gitignore  Makefile  README.md  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml  homebrew.yml  release.yml
.lockbox/: team-keys.txt
Formula/: lockbox.rb
cmd/lockbox/: main.go
internal/commands/key/: key.go
internal/commands/secret/: secret.go
internal/commands/team/: team.go
internal/crypto/: keys.go
internal/git/: git.go
internal/gpg/: gpg.go
internal/output/: output.go
internal/prompt/: prompt.go
internal/version/: version.go
src/lockbox/: main.py
src/lockbox/commands/team/: team.py
src/lockbox/utils/: click.py
