[tool.poetry]
name = "lockbox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "lockbox", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
gnupg = "^2.3.1"
python-gnupg = "^0.5.1"
types-gnupg = "^0.1.5"

[tool.poetry.scripts]
lockbox = "lockbox.main:lockbox"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
